Give fixed footer a z-index

--- a/dev/style.css
+++ b/dev/style.css
@@ -790,6 +790,7 @@ textarea {
 	position: fixed;
 	bottom: 0;
 	width: 100%;
+	z-index: 2;
 }
 
 .solo-word-mark {
