--- a/verbose/style.css
+++ b/verbose/style.css
@@ -805,6 +805,7 @@ textarea {
 	position: fixed;
 	bottom: 0;
 	width: 100%;
+	z-index: 2;
 }
 
 .solo-word-mark {
